# meshinsights-data-pipeline

./: README.md  pyproject.toml
Architectural Options/: GPT5.md  Opus.md
Requirements/: ExampleAiCode.md  ExamplePipelineCode.md  requirements.md
src/core/: context.py  pipeline.py  processor.py
src/plugins/: __init__.py  adx_plugin.py  base.py  manager.py  mysql_plugin.py
